--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div id="bars">
     </div>
     <script>setInterval(async function () {
-            let resp = await fetch("http://151.216.11.84/data")
+            let resp = await fetch("https://data-bornhack-hothub.f-t.win/data")
             let values = await resp.json();
             let min = 0;
             let max = 50;
